# nest-gpu

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile.am  README.md  VERSION  autoinst  config.h.in  configure.ac  tmp.sh  tmp1.sh  todo.txt  tox.ini
.github/workflows/: static_tests.yml
build_support/: .clang-tidy-ignore  check_all_c_c++_cu_files.sh  clang-format-cuda.sh  clang-tidy-cuda.sh  format_all_c_c++_cu_files.sh  log.txt
c++/examples/: brunel_mpi.cpp  brunel_mpi_nx.cpp.old  brunel_net.cpp  brunel_outdegree.cpp  brunel_outdegree_mpi.cpp  brunel_vect.cpp  make_brunel_net.sh  make_brunel_outdegree.sh  make_brunel_vect.sh  make_constcurr.sh  make_setvar.sh  make_test_connect.sh  test_aeif_cond_beta.cpp  test_connect.cpp  test_constcurr.cpp  test_error.cpp  test_setvar.cpp
c++/tests/: make_test_connections.sh  make_test_neuron_groups.sh  test_connections.cpp  test_neuron_groups.cpp
cmake/: CheckIncludesSymbols.cmake  ColorMessages.cmake  ConfigureSummary.cmake  FindLTDL.cmake  FindPythonModule.cmake  GetTriple.cmake  NestVersionInfo.cmake  ProcessOptions.cmake  VersionInfo.cmake
doc/: community.rst  conf.py  contents.rst  extractor_userdocs.py  index.rst  publications.rst  requirements.txt
doc/_static/css/: custom.css
doc/download/: download.rst
doc/examples/: index.rst
doc/guides/: differences_nest-gpu_nest.rst  how_to_record_spikes.rst  implement_new_neuron_models.rst  index.rst
doc/installation/: cmake_options.rst  index.rst  installation.rst
doc/tutorials/: index.rst
libnestutil/: CMakeLists.txt  config.h.in
macOS/pythonlib/: nestgpu.py
python/: script.sh  test1.txt  test10.txt  test11.txt  test12.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
python/Potjans_2014/: README.md  README.rst  helpers.py  network.py  network_params.py  network_remove_conn_key.py  run_benchmark.py  run_benchmark.sh  run_microcircuit.py  run_microcircuit_CumulSum.py  run_microcircuit_remove_conn_key.py  sim_params.py  sim_params.templ  sim_params_benchmarking.py  sim_params_norec.py  sim_params_norec.templ
python/Potjans_2014_hc/: README.rst  eval_microcircuit_time.py  helpers.py  network.py  network_params.py  run_microcircuit.py  sim_params.py  sim_params.templ  sim_params_norec.py  stimulus_params.py
python/Potjans_2014_s/: eval_microcircuit_time.py  helpers.py  network.py  network_params.py  sim_params.py  sim_params.templ  sim_params_norec.py
python/Potjans_2014_tmp/: network.py  network.py.bk  sim_params_norec.py
python/examples/: balanced_izh.py  balanced_izh_cond_beta.py  balanced_izh_psc_exp_2s.py  balanced_izh_psc_exp_2s_eval_time.py  balanced_izh_psc_exp_5s.py  brunel_array.py  brunel_list.py  brunel_mpi.py  brunel_net.py  brunel_outdegree.py  example1.py  example2.py  plot_aeif_cond_alpha.py  plot_aeif_cond_alpha_multisynapse.py  plot_aeif_cond_beta.py  plot_aeif_cond_beta_multisynapse.py  plot_aeif_psc_alpha.py  plot_aeif_psc_alpha_multisynapse.py  plot_aeif_psc_delta.py  plot_aeif_psc_delta_multisynapse.py  plot_aeif_psc_exp.py  plot_aeif_psc_exp_multisynapse.py  plot_fast_iaf_psc_exp.py  plot_iaf_psc_alpha.py  plot_iaf_psc_exp.py  plot_iaf_psc_exp_g.py  plot_izh.py  plot_izh_cond_beta.py  stdp.py  temp_mpi.py  tmp.py  tmp1.py  tmp4.py  tmp5.py  tmp6.py  tmp7.py
python/hpc_benchmark/: connections_0.json  connections_1.json  dum_hpc.py  hpc_benchmark.py  hpc_benchmark_noMPI.py  hpc_benchmark_noMPI_old.py  hpc_benchmark_old.py  hpc_benchmark_test.py  log_0.json  log_1.json  log_2.json
python/mpi_mem_check/: README.md  benchmark.sh  benchmark_terminal.sh  benchmark_terminal_12b.sh  benchmark_terminal_16b.sh  n_conn_list.txt  n_neuron_list.txt  run.sh  run_terminal.sh  summary.sh  test.py  test_12b.py  test_16b.py
python/test/: err.py  err_mpi.py  log_remote_connect.txt  logp3_connect.txt  logp3_getarr.txt  logp3_group_param.txt  logp3_setvar2.txt  logp3_syn_group.txt  nest_iaf_psc_alpha.py  parrot_neuron.py  plot_aeif_psc_delta_multisynapse.py  test_aeif_cond_alpha.py  test_aeif_cond_alpha_multisynapse.py  test_aeif_cond_beta.py  test_aeif_cond_beta_multisynapse.py  test_aeif_cond_beta_nest.txt  test_aeif_psc_alpha.py  test_aeif_psc_alpha_multisynapse.py  test_aeif_psc_delta.py  test_aeif_psc_delta_multisynapse.py  test_aeif_psc_exp.py  test_aeif_psc_exp_multisynapse.py  test_all.sh  test_brunel_array.py  test_brunel_list.py  test_brunel_mpi.py  test_brunel_mpi_hg.py  test_brunel_outdegree.py  test_brunel_outdegree_mpi.py  test_brunel_outdegree_mpi_hg.py  test_brunel_user_m1.py  test_connect.py  test_distribution.py  test_ext_neuron.py  test_fixed_total_number.py  test_fixed_total_number.py.bk2  test_getarr.py  test_group_param.py  test_iaf_psc_alpha.py  test_iaf_psc_alpha_nest.txt  (+31 more)
python/test_new_features/: example2.py  oct_plot.m  test_distributions.py  test_fixed_total_number.py  test_new_connect.py  test_new_connect.py.bk1  tmp.py
pythonlib/: CMakeLists.txt  Makefile.in  nestgpu.py
src/: CMakeLists.txt  RemoteConnections_note.txt  aeif_cond_alpha.cu  aeif_cond_alpha.h  aeif_cond_alpha_kernel.h  aeif_cond_alpha_multisynapse.cu  aeif_cond_alpha_multisynapse.h  aeif_cond_alpha_multisynapse_kernel.h  aeif_cond_alpha_multisynapse_rk5.h  aeif_cond_alpha_rk5.h  aeif_cond_beta.cu  aeif_cond_beta.h  aeif_cond_beta_kernel.h  aeif_cond_beta_multisynapse.cu  aeif_cond_beta_multisynapse.h  aeif_cond_beta_multisynapse_kernel.h  aeif_cond_beta_multisynapse_rk5.h  aeif_cond_beta_rk5.h  aeif_psc_alpha.cu  aeif_psc_alpha.h  aeif_psc_alpha_kernel.h  aeif_psc_alpha_multisynapse.cu  aeif_psc_alpha_multisynapse.h  aeif_psc_alpha_multisynapse_kernel.h  aeif_psc_alpha_multisynapse_rk5.h  aeif_psc_alpha_rk5.h  aeif_psc_delta.cu  aeif_psc_delta.h  aeif_psc_delta_kernel.h  aeif_psc_delta_multisynapse.cu  aeif_psc_delta_multisynapse.h  aeif_psc_delta_multisynapse_kernel.h  aeif_psc_delta_rk5.h  aeif_psc_exp.cu  aeif_psc_exp.h  aeif_psc_exp_kernel.h  aeif_psc_exp_multisynapse.cu  aeif_psc_exp_multisynapse.h  aeif_psc_exp_multisynapse_kernel.h  aeif_psc_exp_multisynapse_rk5.h  (+230 more)
(+53 files in other folders)
